# learning-cuda

./: .gitignore  CMakeLists.txt  build.sh  cnr.sh  main.cu  out.txt  requirements.txt  run.sh
include/: blas_wrapper.cuh  common.cuh  cu_ptr_array.cuh  cuarray.cuh  cumatrix.cuh  curand.cuh  metrics.cuh
src/: example_batched_dgemm.cu  example_dgemm.cu  example_dgemm_matrix.cu
util/: generate_matrices.py  print_hardware_info.py  start_mps.sh  stop_mps.sh
